cmake_minimum_required(VERSION 3.15)
project(VulkanT)

set(CMAKE_CXX_STANDARD 17)

add_subdirectory(VulkanTesting)
add_subdirectory(VulkanT01)
add_subdirectory(VulkanT02)
add_subdirectory(VulkanT03)
add_subdirectory(VulkanT04)
add_subdirectory(VulkanT05)
add_subdirectory(VulkanT06)
add_subdirectory(VulkanT07)
add_subdirectory(VulkanT08)
add_subdirectory(VulkanT09)
add_subdirectory(VulkanT10)
add_subdirectory(VulkanT11)
add_subdirectory(VulkanT12)
add_subdirectory(VulkanT13)
add_subdirectory(VulkanT14)
add_subdirectory(VulkanT15)
add_subdirectory(VulkanT16)
add_subdirectory(VulkanT17)
add_subdirectory(VulkanT18)
add_subdirectory(VulkanT19)
add_subdirectory(VulkanT20)
add_subdirectory(VulkanT21)